# nexustrade

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY_HF.md  Dockerfile  Dockerfile.hf-space  LICENSE  Makefile  README.md  docker-compose.cpu-only.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-hf.yml  deploy.yml
config/: default.yaml  demo.yaml  development.yaml  production.yaml
config/examples/: crypto_binance.yaml  forex_with_tv.yaml  india_nse_zerodha.yaml  local_ollama_only.yaml  multi_market_full.yaml  strategy_basic.yaml  us_equities_basic.yaml
config/prompts/agents/: aswath_damodaran.j2  ben_graham.j2  bill_ackman.j2  carl_icahn.j2  cathie_wood.j2  charlie_munger.j2  david_tepper.j2  george_soros.j2  howard_marks.j2  jim_simons.j2  joel_greenblatt.j2  michael_burry.j2  peter_lynch.j2  ray_dalio.j2  seth_klarman.j2  stanley_druckenmiller.j2  technical_analyst.j2  warren_buffett.j2
config/prompts/aggregation/: portfolio_manager.j2
config/prompts/debate/: bear_researcher.j2  bull_researcher.j2  research_manager.j2
config/prompts/risk/: aggressive.j2  conservative.j2  neutral.j2  risk_manager.j2
docs/: 01_PRD.md  02_FEATURE_SOURCING.md  03_TECH_STACK.md  04_ARCHITECTURE.md  05_INTEGRATION_GUIDE.md
huggingface/: start.sh
scripts/: deploy.sh
services/agent-engine/: Dockerfile
services/data/: Dockerfile
services/execution/: Dockerfile
services/fingpt/: Dockerfile  server.py
services/fingpt/proto/: fingpt.proto
services/finrl/: Dockerfile  server.py
services/finrl/proto/: finrl.proto
services/qlib/: Dockerfile  server.py
services/qlib/proto/: qlib.proto
services/web/: Dockerfile
src/nexustrade/agents/: aggregator.py  executor.py  memory.py  multi_timeframe.py  prompt_loader.py
src/nexustrade/agents/adapters/: ai_hedge_fund.py  finbert_agent.py  fingpt_sentiment.py  finrl_agent.py  qlib_alpha.py  quantagent_vision.py  trading_agents.py
src/nexustrade/backtest/: engine.py  metrics.py  report.py
src/nexustrade/cli/: main.py
src/nexustrade/core/: config.py  events.py  exceptions.py  interfaces.py  metrics.py  models.py  registry.py
src/nexustrade/data/: cache.py  commodities.py  forex.py  router.py
src/nexustrade/data/adapters/: broker_data.py  ccxt_data.py  openbb_adapter.py  tradingview_mcp.py  yahoo.py
src/nexustrade/execution/: engine.py  webhooks.py
src/nexustrade/execution/backends/: alpaca.py  ccxt_broker.py  ib.py  openalgo.py  paper.py  tradingview.py
src/nexustrade/llm/: router.py
src/nexustrade/notifications/: __init__.py  discord.py  email.py  telegram.py  webhook.py
src/nexustrade/risk/: __init__.py  circuit_breaker.py  debate.py  engine.py  india_rules.py  pre_trade.py
src/nexustrade/risk/sizing/: __init__.py  cvar.py  fixed_fraction.py  kelly.py  max_drawdown.py  volatility.py
src/nexustrade/runtime/: __init__.py  alerts.py  backtest_runner.py  paper_loop.py  state.py
src/nexustrade/scheduler/: __init__.py  engine.py
src/nexustrade/strategy/: conditions.py  engine.py  parser.py
src/nexustrade/web/: __init__.py  app.py  dashboard.py
src/nexustrade/web/api/: __init__.py  agents.py  audit.py  backtest.py  config.py  health.py  markets.py  orders.py  portfolio.py  risk.py  runtime.py  signals.py
tests/: conftest.py
tests/fixtures/: agent_signals.json  news_samples.json  ohlcv_aapl.json  ohlcv_btc.json  ohlcv_eurusd.json  ohlcv_reliance.json
tests/unit/: test_cache.py  test_config.py  test_data_router.py  test_event_bus.py  test_forex.py  test_interfaces.py  test_llm_router.py  test_metrics.py  test_models.py  test_models_extended.py  test_multi_timeframe.py  test_notifications.py  test_registry.py  test_scheduler.py
tests/unit/test_agents/: test_aggregator.py  test_debate.py  test_executor.py  test_finbert.py  test_memory.py  test_persona_agent.py  test_prompt_loader.py
tests/unit/test_backtest/: test_backtest.py
tests/unit/test_data/: test_tradingview_mcp.py
tests/unit/test_execution/: test_engine.py  test_ib.py  test_paper.py  test_webhook.py
tests/unit/test_risk/: test_circuit_breaker.py  test_engine.py  test_pre_trade.py  test_sizing.py
tests/unit/test_runtime/: test_api.py  test_paper_loop.py  test_state.py
tests/unit/test_strategy/: test_strategy.py
tests/unit/test_web/: test_dashboard.py
